@@ -1,7 +1,8 @@
 # v1.0.2 - ???
 Additions
-1. Added a ds_str_chsubst() function for substituting characters in a string.
-2. Added ds_str_trim() functions for removing leading and trailing whitespace.
+1. Added ds_str_chsubst() functions for substituting characters in a string.
+2. Added ds_str_strsubst() functions for substituting substrings in a string.
+3. Added ds_str_trim() functions for removing leading and trailing whitespace.
 
 Bugfixes
 1. ds_hmap_keys() now returns zero on error.
